--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     </header>
     <main>
-        <h1>Rama de repo</h1>
-
+        <h1>Ramas aprobadas</h1>
+        
     </main>
     <footer>
         <h4>Todos los derechos reservados</h4>
